--- a/index_bio.html
+++ b/index_bio.html
@@ -5,9 +5,9 @@
     <script type="text/javascript" src="hilitor.js"></script>
     <script type="text/javascript" src="echarts.min.js"></script>
 
-    <script type="text/javascript" src="water_question.js"></script>
+    <script type="text/javascript" src="BioQuestion.js"></script>
 
-    <script type="text/javascript" src="visualizeDataWater.js"></script>
+    <script type="text/javascript" src="visualizeDataBio.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <style>
       * {
