--- a/bio-map.html
+++ b/bio-map.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Map</title>
+    <script src="map_data/bioData_geo.js"></script>
+    <script src="libs/v6.1.1-dist/ol.js"></script>
+    <script src="map_data/map-visualize.js"></script>
+    <script>
+        window.onload = ()=>{
+            load_map(bio_data)
+        }
+    </script>
     <link rel="stylesheet" href="libs/v6.1.1-dist/ol.css">
     <style type="text/css">
         .map {
@@ -85,11 +93,6 @@
         <div id="popup-content"></div>
     </div>
 </div>
-
-
-<script src="map_data/bioData_geo.js"></script>
-<script src="libs/v6.1.1-dist/ol.js"></script>
-<script src="map_data/map-bio.js"></script>
 
 
 </body>
